# notes-forge

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.cache/oh-my-posh/: init.26.11.0.4e7dc1dc8ef710cb..ps1  omp.cache
.github/workflows/: deploy-pages.yml
demo/: README.md  notebook.ipynb
demo/guides/: advanced.md  guide.md
src/notes_forge/: __init__.py  build_ops.py  cli_app.py  cli_options.py  constants.py  fs_tree.py  notes_forge.py  runtime_logging.py  server_ops.py  ui_assets.py
src/notes_forge/notes_forge_assets/: app-part1.js  app-part2.js  app-part3.js  app.js  body.html  head.html  style-base.css  style-dark.css  style.css
tests/: test_notes_forge.py
