[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-forge"
version = "0.1.0"
description = "Zero-config notes preview and static deployment CLI for Markdown, PDF, and Jupyter notebooks"
authors = [
    {name = "fenglielie", email = "fenglielie@qq.com"}
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
notes-forge = "notes_forge.notes_forge:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
notes_forge = ["notes_forge_assets/*"]
